--- a/[base]/chars/html/ui.html
+++ b/[base]/chars/html/ui.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row" id="logo">
                 <div class="col text-center">
-                    <img src="img/logo.png" alt=".CZ">
+                    <img src="img/logo.png" alt="">
                 </div>
             </div>
             <div class="row" style="display: none;" id="charsList">
